--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,15 @@
+task wrapper (type:Wrapper) {
+    gradleVersion = '2.4'
+    distributionUrl = 'https://services.gradle.org/distributions/gradle-2.4-all.zip'
+}
+
 buildscript {
     repositories {
         jcenter()
     }
     dependencies {
         classpath 'com.jakewharton.sdkmanager:gradle-plugin:0.12.0'
-        classpath 'com.android.tools.build:gradle:1.1.1'
+        classpath 'com.android.tools.build:gradle:1.2.2'
         classpath 'me.tatarka:gradle-retrolambda:2.5.0'
     }
 }
