--- a/example/src/main/AndroidManifest.xml
+++ b/example/src/main/AndroidManifest.xml
@@ -5,6 +5,9 @@
 
     <uses-sdk tools:overrideLibrary="android.test.runner,com.android.support.test"/>
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -20,11 +23,19 @@
         </activity>
 
         <provider
-            android:name="net.sf.fdshare.RootFileProvider"
-            android:authorities="net.sf.fdshare.provider"
-            android:enabled="true"
-            android:exported="false"
-            android:grantUriPermissions="true">
+                android:name="net.sf.fdshare.RootFileProvider"
+                android:authorities="${applicationId}.provider.root"
+                android:enabled="true"
+                android:exported="false"
+                android:grantUriPermissions="true">
+        </provider>
+
+        <provider
+                android:name="net.sf.fdshare.SimpleFilePorvider"
+                android:authorities="${applicationId}.provider.simple"
+                android:enabled="true"
+                android:exported="false"
+                android:grantUriPermissions="true">
         </provider>
     </application>
 
