--- a/example/build.gradle
+++ b/example/build.gradle
@@ -23,12 +23,11 @@ android {
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig debug.signingConfig
         }
         debug {
             jniDebuggable true
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
     packagingOptions {
@@ -43,7 +42,9 @@ android {
 }
 
 dependencies {
-    compile project(':lib')
+    releaseCompile project(path: ':lib', configuration: 'release')
+    debugCompile project(path: ':lib', configuration: 'debug')
+
     compile 'com.j256.simplemagic:simplemagic:1.6'
     compile 'com.android.support:support-v4:22.1.1'
 
