--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,10 @@ buildscript {
         classpath 'com.jakewharton.sdkmanager:gradle-plugin:0.12.0'
         classpath 'com.android.tools.build:gradle:1.2.2'
         classpath 'me.tatarka:gradle-retrolambda:2.5.0'
+        classpath 'me.tatarka.retrolambda.projectlombok:lombok.ast:0.2.3.a2'
     }
+
+    configurations.classpath.exclude group: 'com.android.tools.external.lombok'
 }
 
 allprojects {
