--- a/example/build.gradle
+++ b/example/build.gradle
@@ -14,7 +14,7 @@ android {
     buildToolsVersion '22.0.1'
 
     defaultConfig {
-        applicationId "net.sf.mymodule.example"
+        applicationId "net.sf.fdshare.example"
         minSdkVersion 11
         targetSdkVersion 22
         versionCode 1
