--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,23 @@
 language: android
+addons:
+  apt:
+    packages:
+    - pandoc
 android:
   components:
     - build-tools-22.0.1
     - android-21
     - extra-android-m2repository
-script: PATH="$PATH:~/crystax-ndk-10.1.0" ./gradlew build --info
+script: PATH="$PATH:`pwd`/crystax-ndk-10.3.2" ./gradlew build --info
 jdk:
   - oraclejdk8
 before_install:
   - chmod +x travis-build
   - ./travis-build
+after_failure:
+  - pandoc library/build/outputs/lint-results.html -t plain
 cache:
   directories:
-    - crystax-ndk-10.1.0
+    - crystax-ndk-10.3.2
     - $HOME/.m2
     - $HOME/.gradle
